# Tronus

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt
Engine/assets/: ForwardRenderer.glsl  ForwardRenderer.json  ImguiRenderer.glsl  ImguiRenderer.json  Renderer2D.glsl  Renderer2D.json  Simple2D.glsl  SimpleRenderer2D.json  df_dir_lightning.glsl  df_dir_lightning.json  df_geometry.glsl  df_geometry.json  df_lightning.glsl  df_lightning.json  df_null.glsl  df_null.json  test.json  test2.json  test_image.json  test_shader.glsl  test_shader.json  test_sync_dep.json  test_texture.json
Engine/tr/: tr.h
Engine/tr/core/: Engine.cpp  Engine.h  JobHandler.cpp  JobHandler.h  Subsystem.cpp  Subsystem.h
Engine/tr/event/: CommonEvents.h  EventListener.h  EventSystem.cpp  EventSystem.h  Signal.h
Engine/tr/filesystem/: BinaryFileHelper.cpp  BinaryFileHelper.h  Filesystem.cpp  Filesystem.h  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  Stream.h  StreamBuffer.cpp  StreamBuffer.h  StreamDevice.cpp  StreamDevice.h
Engine/tr/gameobject/: CameraComponent.cpp  CameraComponent.h  ColliderComponent2D.cpp  ColliderComponent2D.h  Collision2DCapability.cpp  Collision2DCapability.h  Component.cpp  Component.h  Component2D.cpp  Component2D.h  DefaultComponents.h  Game.h  GameObject.cpp  GameObject.h  InputComponent.cpp  InputComponent.h  MovementComponent.h  Sprite2DComponent.cpp  Sprite2DComponent.h  SpriteComponent.cpp  SpriteComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  System.h  World.cpp  World.h
Engine/tr/graphics/: BufferHelper.cpp  BufferHelper.h  DebugWindow.cpp  DebugWindow.h  DeferredRenderer.cpp  DeferredRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  GBuffer.cpp  GBuffer.h  GLCheck.cpp  GLCheck.h  GLSLShader.cpp  GLSLShader.h  GraphicsHandler.cpp  GraphicsHandler.h  Image.cpp  Image.h  ImguiRenderer.cpp  ImguiRenderer.h  InterfaceTypes.h  RenderDefinitions.h  Renderer2D.cpp  Renderer2D.h  Simple2DRenderer.cpp  Simple2DRenderer.h  StaticMesh.cpp  StaticMesh.h  Texture.cpp  Texture.h
Engine/tr/math/: Mat4.cpp  Mat4.h  Math.h  Quaternion.cpp  Quaternion.h  Rect.h  Transform.h  Vec2.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
Engine/tr/profile/: Profiler.cpp  Profiler.h
Engine/tr/util/: ClassID.h  Exceptions.h  Keys.h  Log.cpp  Log.h  MPSCQueue.h  MakeID.cpp  MakeID.h  NamedType.h  Serializer.h  Singleton.h  TemplateMeta.h  Timer.cpp  Timer.h
Examples/: CMakeLists.txt
Examples/Playground/: main.cpp
Tests/: CMakeLists.txt  engine_test.cpp  filesystem_test.cpp  gameobject_test.cpp  jobhandler_test.cpp  log_test.cpp  math_test.cpp
Tools/: CMakeLists.txt  obj_to_trb.cpp  trassetconverter.cpp
